...
                //continue button
                onLastPage
                    ? GestureDetector(
                        child: Text(
                          'Continue',
                          style: GoogleFonts.bebasNeue(fontSize: 25),
                          key: const Key('continue'),
                        ),
                        onTap: () {
                          FirebaseCommands().updateUser2();
                          Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) => Conditions()));
                        })
                    : GestureDetector(
                        child: Text(
                          "Next",
                          style: GoogleFonts.bebasNeue(fontSize: 25),
                          key: const Key('next'),
                        ),
                        onTap: () {
                          _controller.nextPage(
                              duration: Duration(milliseconds: 500),
                              curve: Curves.easeIn);
                        },
...
